<resources>
    <string name="app_name">ActivityResult</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="hello_world">Hello World!</string>
    <string name="color">Color</string>
    <string name="alignment">Alignment</string>
</resources>
